--- a/Daily THA/THA 8/index.html
+++ b/Daily THA/THA 8/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="box">
-        <div class="number">100</div>
+        <div class="one"></div>
+        <div class="one-second"></div>
+        <div class="zero-one"></div>
+        <div class="zero-two"></div>
         <div class="days">DAYS</div>
         <div class="last">CSS CHALLENGE</div>
     </div>
